@@ -17,7 +17,7 @@ class GESD(BaseThresholder):
        Parameters
        ----------
 
-       max_outliers : int, optional (default='native')
+       max_outliers : int, optional (default='auto')
             maximum number of outliers that the dataset may have. Default sets
             max_outliers to be half the size of the dataset
 
@@ -69,7 +69,7 @@ class GESD(BaseThresholder):
 
     """
 
-    def __init__(self, max_outliers='native', alpha=0.05):
+    def __init__(self, max_outliers='auto', alpha=0.05):
 
         self.max_outliers = max_outliers
         self.alpha = alpha
@@ -100,7 +100,7 @@ class GESD(BaseThresholder):
 
         limit = 1.1
 
-        if self.max_outliers=='native':
+        if self.max_outliers=='auto':
             self.max_outliers = int(len(decision)/2)
 
         for i in range(self.max_outliers):
